# dbconnector

./: Cargo.toml  \  examplecol.csv
src/: .main.rs.swp  getfields.rs  main.rs  pushdata.rs  tablecreate.rs
src/pushdata/: createtablestruct.rs  gettablecol.rs
