[package]
name = "dbconnector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql = { version = "*", default-features = false, features = ["minimal", "rustls-tls"] }
mysql_common = { version = "*", default-features = false, features = ["bigdecimal03", "time03", "uuid"]}
csv="1.1"
clap = { version = "4.0", features = ["derive"] }
